<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/bb_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bb_img"
        android:layout_centerHorizontal="true"
        android:text="@string/conversation"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dip"
        android:text="@string/to_login"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/phone_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:text="@string/phone_register"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/weixin_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/phone_register_btn"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:text="@string/weixin_register"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>