<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="#00ff00"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/nomal_diviver_line" />

    <TextView
        android:id="@+id/local_photo"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/local_photo"
        android:textColor="#00ff00"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/nomal_diviver_line" />

    <TextView
        android:id="@+id/cancel_text"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#000000"
        android:textSize="15sp" />

</LinearLayout>