<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dip" >

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="BBB"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dip"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="30dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/phone_num_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:inputType="phone"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:hint="@string/input_phone_num"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="5dip"
            android:background="@color/edit_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:background="@null"
                android:inputType="textPassword"
                android:layout_alignParentRight="true"
                android:hint="@string/input_password"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="5dip"
            android:background="@color/edit_line" />

        <TextView
            android:id="@+id/forget_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="10dip"
            android:text="@string/forget_password"
            android:textColor="#00ff00"
            android:textSize="13sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/weixin_fast_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fast_weixin_login"
            android:textColor="#00ff00"
            android:textSize="15sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/weixin_fast_login"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>