<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView android:id="@+id/weixin_text"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:text="@string/weixin"
        android:textColor="#00ff00"
        android:textSize="16sp"
        android:gravity="center"/>
    <View android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#333434"/>
    <TextView android:id="@+id/group_text"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:text="@string/group"
        android:textColor="#00ff00"
        android:textSize="16sp"
        android:gravity="center"/>
    <View android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#333434"/>
    <TextView android:id="@+id/friend_text"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:text="@string/weixin"
        android:textColor="#00ff00"
        android:textSize="16sp"
        android:gravity="center"/>
    <View android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#333434"/>
    <TextView android:id="@+id/cancel_text"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:text="@string/cancel"
        android:textColor="#333434"
        android:textSize="16sp"
        android:gravity="center"/>
    <View android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#333434"/>
</LinearLayout>